<resources>
    <string name="app_name">Action memo</string>
    <string name="add_new">Add note</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello">Hello</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Sign in</string>
    <string name="or">Or</string>
    <string name="saved_user">Saved users</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth date</string>
    <string name="Return">Return</string>
    <string name="incorrect">incorrect username or password</string>
    <string name="permission_required">This permission is required to be able to upload profile picture</string>
    <string name="permission_required_2">This permission is required to be able to upload screenshot</string>
    <string name="complete_required">Please complete all required field</string>
    <string name="confirm">Confirmation</string>
    <string name="enter_password">please Enter password of this user to remove this user</string>
    <string name="enter_password_notes">please Enter password of this user to remove this user\'s notes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="mis_match">incorrect password</string>
    <string name="delete">Delete user</string>
    <string name="logged_in">logged in successfully</string>
    <string name="edit">Edit</string>
    <string name="delete_note">Delete</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="priority_0">not important, not urgent</string>
    <string name="priority_1">normal</string>
    <string name="priority_2">important, but not urgent</string>
    <string name="priority_3">important and urgent</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="save">Save note</string>
    <string name="delete_msg">Are you sure you want to delete this note ?</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Change">Change</string>
    <string name="incorrect_password">your password and new password is not match</string>
    <string name="successfully_change">Your password successfully changed</string>
    <string name="app_lang">App language</string>
    <string name="mode_change">Change mode</string>
    <string name="apps">Our apps</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share app</string>
    <string name="change_password">Change password</string>
    <string name="delete_notes">Delete All Notes</string>
    <string name="delete_account">Delete account</string>
    <string name="share_msg">You can scan this link to get our app on google play\nor\n
        you can send the app link in message by clicking on the below button</string>
    <string name="share_with">Share with …</string>
    <string name="save_edit">Save</string>
    <string name="update_msg">Data updated successfully</string>
    <string name="current_version">Current app version is </string>
    <string name="delete_all_notes_title">Delete all notes</string>
    <string name="delete_all_notes_msg"><u>CAUTION:</u> if you delete all your notes you can\'t undo this action</string>
    <string name="delete_account_title">Delete account</string>
    <string name="delete_account_msg"><u>CAUTION:</u> if you delete your account, account and your notes will permanently delete and you can\'t undo them</string>
    <string name="notes_deleted">Notes deleted successfully</string>
    <string name="user_deleted">User deleted successfully</string>
    <string name="about_us">This app is developed and designed by devement team.\nuser can write his notes privately and no one will see any of his notes even if there is multiple users uses application on the same device each one will have his private notes and these notes don\'t share with anyone else.\nif you have any suggestion or issue with our app, please don\'t hesitate to contact with us.\nwe always pleasure with your serving and hope to improve your experience with our apps.\nif you like this app please rate us on google play.</string>
    <string name="contact">please don\'t hesitate to contact us if you have any suggestions or technical issue</string>
    <string name="request_pic">if you contacting us for technical issue, this photo will help us to solve your problem\nplease take a screenshot for your problem and attach it with this message</string>
    <string name="browse">Browse</string>
    <string name="title_hint">ex: problem with adding new note, improvement suggestion</string>
    <string name="pleasure_msg">We received your message and we are happy for contacting with you and hope you contact with us again\nwe will reply to your message as soon as possible</string>
    <string name="new_message">New Message received</string>
    <string name="pleasure_title">Message received to our team</string>
    <string name="successful_update">Update installed successfully</string>
    <string name="text_copied">Text copied</string>

    <string name="eg">Eman Guide</string>
    <string name="pm">Password manager</string>
    <string name="qr">QR Reader</string>
    <string name="send">Send</string>

    <array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </array>

    <array name="mode">
        <item>Light mode</item>
        <item>Dark mode</item>
    </array>
</resources>