<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MAIN_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:padding="@dimen/_10ssp"
            android:textDirection="locale">

            <TextView
                android:id="@+id/txt_contact"
                style="@style/BlackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/inter_regular"
                android:text="@string/contact"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_contact"
                android:layout_marginTop="@dimen/_7ssp"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_mail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/_8ssp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_mail"
                android:layout_marginTop="@dimen/_7ssp"
                android:hint="@string/title"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_body"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_title"
                android:layout_marginTop="@dimen/_7ssp"
                android:hint="@string/body">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_body"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:lines="8" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/request_screenshoot"
                style="@style/BlackTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_body"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/inter_regular"
                android:text="@string/request_pic"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/request_screenshoot"
                android:layout_alignParentEnd="true"
                android:layoutDirection="locale"
                android:orientation="horizontal"
                android:textDirection="locale"
                android:id="@+id/layout_linear">

                <TextView
                    android:id="@+id/txt_fileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginEnd="@dimen/_10ssp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_browse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titan_one_regular"
                    android:paddingTop="@dimen/_10ssp"
                    android:paddingBottom="@dimen/_10ssp"
                    android:text="@string/browse"
                    app:cornerRadius="@dimen/_15ssp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_linear"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_15ssp"
                android:layout_marginEnd="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_10ssp"
                android:fontFamily="@font/titan_one_regular"
                android:paddingTop="@dimen/_10ssp"
                android:paddingBottom="@dimen/_10ssp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_15ssp"
                app:cornerRadius="@dimen/_7ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/WhiteBtnStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_send"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_5ssp"
                android:layout_marginEnd="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_10ssp"
                android:fontFamily="@font/titan_one_regular"
                android:layout_centerHorizontal="true"
                android:paddingTop="@dimen/_10ssp"
                android:paddingBottom="@dimen/_10ssp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp" />


        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>