<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MAIN_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:textDirection="locale">

            <include
                android:id="@+id/picture_layout"
                layout="@layout/profile_pic_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/picture_layout"
                android:layout_margin="@dimen/_7ssp"
                android:hint="@string/username"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/_7ssp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birth_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_layout"
                android:layout_margin="@dimen/_7ssp"
                android:hint="@string/birth_date"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_birth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/_7ssp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mail_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birth_layout"
                android:layout_margin="@dimen/_7ssp"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_mail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/_7ssp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mail_layout"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_10ssp"
                android:fontFamily="@font/titan_one_regular"
                android:paddingTop="@dimen/_10ssp"
                android:paddingBottom="@dimen/_10ssp"
                android:text="@string/save_edit"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                app:cornerRadius="@dimen/_7ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/WhiteBtnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_below="@+id/btn_save"
                android:layout_marginEnd="@dimen/_10ssp"
                android:fontFamily="@font/titan_one_regular"
                android:paddingTop="@dimen/_10ssp"
                android:paddingBottom="@dimen/_10ssp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp" />


        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>